# appsec-galaxy

./: .appsec-galaxy-ignore  .gitignore  .gitleaksignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  action.yml  env.example  pyproject.toml  requirements-web.txt  requirements.txt  run_tests.sh  start_cli.sh  start_web.sh
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: self-scan.yml  tests.yml
clients/: SETUP.md  security-scan.yml
configs/: .gitleaks.toml  checkstyle.xml  clippy.toml  eslint.config.js  golangci.yml  phpstan.neon  rubocop.yml  swiftlint.yml
docs/: ROADMAP.md
mcp/: README.md  appsec_galaxy_mcp_server.py  mcp_env.example
scripts/: fail_on_critical.py
src/appsec_galaxy/: __init__.py  __main__.py  ai_cross_file.py  config.py  cross_file_analyzer.py  dependency_analyzer.py  enhanced_analyzer.py  exceptions.py  finding.py  logging_config.py  main.py  package_registry.py  path_utils.py  project_paths.py  sbom_generator.py  scan_filters.py  scan_history.py  vuln_intel.py  web_app.py
src/appsec_galaxy/auto_remediation/: __init__.py  remediation.py
src/appsec_galaxy/reporting/: __init__.py  ai_summary.py  html.py  sarif.py
src/appsec_galaxy/reporting/templates/: report.html
src/appsec_galaxy/scanners/: __init__.py  ai_scanner.py  checkstyle.py  clippy.py  eslint.py  gitleaks.py  golangci_lint.py  phpstan.py  pylint.py  quality_scanner_base.py  rubocop.py  semgrep.py  swiftlint.py  trivy.py  validation.py
src/appsec_galaxy/templates/: index.html
tests/: README.md  __init__.py  conftest.py  test_ai_consumers.py  test_ai_provider.py  test_appsec_galaxy.py
