[project]
name = "appsec-galaxy"
version = "2.4.0"
description = "AI-powered application security scanner with cross-file attack-chain analysis"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"

dependencies = [
    "semgrep>=1.168.0,<2.0.0",
    "openai>=2.0.0,<3.0.0",
    "anthropic>=0.79.0,<1.0.0",
    "defusedxml>=0.7.1,<1.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "requests>=2.34.2,<3.0.0",
    "gitpython>=3.1.50,<4.0.0",
    "rich>=15.0.0,<16.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "typing-extensions>=4.16.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    "mcp>=1.2.0,<2.0.0",
]

[project.scripts]
appsec-galaxy = "appsec_galaxy.main:main"

[project.optional-dependencies]
web = [
    "flask>=3.1.3,<4.0.0",
    "flask-cors>=6.0.5",
    "gunicorn>=26.0.0",
]
dev = [
    "pytest>=9.1.1,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
appsec_galaxy = ["templates/*.html", "reporting/templates/*.html"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["outputs", ".venv"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, UP: pyupgrade (modern syntax),
# B: bugbear (likely bugs), S110: silent try-except-pass
select = ["E", "F", "W", "UP", "B"]
ignore = [
    "E501",  # line length: enforced loosely; long strings in prompts are fine
    "E402",  # module import not at top: startup modules initialize environment and logging first
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
# Lenient baseline: catches real type errors in annotated code without
# demanding annotations everywhere. Tighten over time.
disallow_untyped_defs = false
warn_unused_ignores = true
exclude = ["outputs", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --tb=short -ra"
markers = [
    "security: Security validation tests",
    "scanner: Scanner module tests",
    "slow: Slow tests",
]
norecursedirs = [".git", ".venv", "venv", "node_modules", "outputs", "__pycache__", ".pytest_cache"]
